[tool.poetry]
name = "gkcore"
version = "0.8.0-a"
description = "GNUKhata's REST API server"
authors = ["GNUKhata Contributors"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyramid = "2.0"
psycopg2 = "2.9.3"
requests = "2.28.1"
sqlalchemy = "1.3.20"
monthdelta = "0.9.1"
pyjwt = "1.7.1"
natsort = "7.1.0"
wsgicors = "0.7.0"
jsonschema = "4.8.0"
pycryptodome = "3.15.0"
waitress = "^2.1.2"
gunicorn = "20.1.0"
openpyxl = "3.0.10"
pyramid-openapi3 = "0.14.3"
openapi-spec-validator = "0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
